--- a/audio-record.html
+++ b/audio-record.html
@@ -13,7 +13,6 @@
     <meta name="description" content="WebRTC code samples">
     <meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1, maximum-scale=1">
     <meta itemprop="description" content="Client-side WebRTC code samples">
-    <meta itemprop="image" content="../../../images/webrtc-icon-192x192.png">
     <meta itemprop="name" content="WebRTC code samples">
     <meta name="mobile-web-app-capable" content="yes">
     <meta id="theme-color" name="theme-color" content="#ffffff">
@@ -22,8 +21,6 @@
 
     <title>MediaStream Recording</title>
 
-    <link rel="icon" sizes="192x192" href="../../../images/webrtc-icon-192x192.png">
-    <link href="//fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet" type="text/css">
     <link rel="stylesheet" href="css/main.css">
 
 </head>
@@ -90,7 +87,7 @@
 <!-- mainのjsを読み込み -->
 <script src="js/main-audio.js" async></script>
 <!-- load mixing.js -->
-<script src="js/mixing.js" async></script>
+<script src="js/mixing-new.js" async></script>
 <!--
 <script src="../../../js/lib/ga.js"></script>
 -->
