--- a/audio-record.html
+++ b/audio-record.html
@@ -10,10 +10,9 @@
 <head>
 
     <meta charset="utf-8">
-    <meta name="description" content="WebRTC code samples">
     <meta name="viewport" content="width=device-width, user-scalable=yes, initial-scale=1, maximum-scale=1">
-    <meta itemprop="description" content="Client-side WebRTC code samples">
-    <meta itemprop="name" content="WebRTC code samples">
+    <meta itemprop="description" content="Client-side overdubing application with WebRTC">
+    <meta itemprop="name" content="Client-side overdubing application">
     <meta name="mobile-web-app-capable" content="yes">
     <meta id="theme-color" name="theme-color" content="#ffffff">
 
@@ -29,14 +28,15 @@
 
 <div id="container">
 
-    <h1>Remote Recording Web Applycation</h1>
+    <h1>Remote Recording Web Application</h1>
 
     <p> This app is highly depending on MediaStream Recording
         in the series of
         <a href="//webrtc.github.io/samples/" title="WebRTC samples homepage">WebRTC samples</a>. 
-        For more information see the MediaStream Recording API <a
+        <!-- For more information see the MediaStream Recording API <a
             href="http://w3c.github.io/mediacapture-record/MediaRecorder.html"
             title="W3C MediaStream Recording API Editor's Draft">Editor's&nbsp;Draft</a>.
+        -->
     </p>
     <p><a href="index.html">Video recording version.</a></p>
 
@@ -55,7 +55,7 @@
         <button id="pop" disabled>Pop</button>
         <button id="download" disabled>Download</button>
         <label for="index">Track Number:</label>
-        <input type="number" id="index" name="track_number" value="0"
+        <input type="number" id="index" name="track_number" value="-1"
                min="0" max="0">
         <button id="playall" disabled>Play All</button>
         <input type="file" accept="audio/*" id="upload"></input>
@@ -64,7 +64,7 @@
 
     <div>
         <h4>Media Stream Constraints options</h4>
-        <p>Echo cancellation: <input type="checkbox" id="echoCancellation"></p>
+        <p>(Experimental)Echo cancellation: <input type="checkbox" id="echoCancellation"></p>
     </div>
 
     <div>
@@ -81,13 +81,15 @@
 <!-- include adapter for srcObject shim -->
 <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
 <!-- localでhowler.jsを読み込み -->
-<script src="js/howler.js" async></script>
+<!--<script src="js/howler.js" async></script>-->
 <!-- cdnからhowler.min.jsを読み込み -->
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/howler/2.1.2/howler.min.js"></script> -->
 <!-- mainのjsを読み込み -->
 <script src="js/main-audio.js" async></script>
 <!-- load mixing.js -->
 <script src="js/mixing-new.js" async></script>
+<!-- load lame.all.js -->
+<script src='js/lame.all.js'></script>
 <!--
 <script src="../../../js/lib/ga.js"></script>
 -->
