--- a/remote-recording-assistant.html
+++ b/remote-recording-assistant.html
@@ -28,16 +28,16 @@
 
 <div id="container">
 
-    <h1>Remote Recording Web Assistant</h1>
-    <button id="start">Access mic</button>
+    <h1>リモート録音Webアシスタント</h1>
+    <button id="start">マイクにアクセス</button>
 
     <!-- bottons -->
     <div id="controler-1">
-        <button id="record" disabled>Start Recording</button>
+        <button id="record" disabled>録音</button>
         <input type="file" accept="audio/*" id="upload"></input>
-        <button id="playall" disabled>Play All</button>
+        <button id="playall" disabled>再生</button>
         <button id="play" disabled hidden>Push</button>
-        <button id="download" disabled>Download Mixed-Track</button>
+        <button id="download" disabled>ダウンロード</button>
         <input type="number" id="index" name="track_number" value="0"
                min="0" max="0" hidden>
         
@@ -50,7 +50,7 @@
        
     </div>
     <div id="controler-2">
-        <button id="pop" disabled>Delete:</button>
+        <button id="pop" disabled>次の番号のトラックを削除:</button>
         <input type="number" id="index_for_delete" name="track_number_for_delete" value="0"
                min="0" max="0">
     </div>
