--- a/remote-recording-assistant.html
+++ b/remote-recording-assistant.html
@@ -29,7 +29,7 @@
 <div id="container">
 
     <h1>リモート録音Webアシスタント</h1>
-    <button id="start">マイクにアクセス</button>
+    <button id="start">マイクオン</button>
 
     <!-- bottons -->
     <div id="controler-1">
