--- a/remote-recording-assistant.html
+++ b/remote-recording-assistant.html
@@ -50,7 +50,7 @@
        
     </div>
     <div id="controler-2">
-        <button id="pop" disabled>次の番号のトラックを削除:</button>
+        <button id="pop" disabled>削除:</button>
         <input type="number" id="index_for_delete" name="track_number_for_delete" value="0"
                min="0" max="0">
     </div>
