--- a/remote-recording-assistant.html
+++ b/remote-recording-assistant.html
@@ -30,12 +30,21 @@
 
     <h1>リモート録音Webアシスタント</h1>
     <button id="start">マイクオン</button>
+    <label>録音レベル</label>
+    <select id="inSel">
+        <option value="1">1 </option>
+        <option value="1.5">1.5</option>
+        <option value="2">2 </option>
+        <option value="0.6">0.6</option>
+        <option value="0.3">0.3</option>
+    </select>
 
     <!-- bottons -->
     <div id="controler-1">
         <button id="record" disabled>録音</button>
         <input type="file" accept="audio/*" id="upload"></input>
         <button id="playall" disabled>再生</button>
+        <button id="stop">停止</button>
         <button id="play" disabled hidden>Push</button>
         <button id="download" disabled>ダウンロード</button>
         <input type="number" id="index" name="track_number" value="0"
