--- a/remote-recording-assistant.html
+++ b/remote-recording-assistant.html
@@ -31,12 +31,31 @@
     <h1>リモート録音Webアシスタント</h1>
     <button id="start">マイクオン</button>
     <label>録音レベル</label>
+    <!--
+    <input type="range" id="inSel" min="0.1" max="2" value="1" step="0.1">
+    <span id="inSel">1</span>
+    -->
     <select id="inSel">
-        <option value="1">1 </option>
-        <option value="1.5">1.5</option>
-        <option value="2">2 </option>
-        <option value="0.6">0.6</option>
-        <option value="0.3">0.3</option>
+        <option value="0.2">1</option>
+        <option value="0.4">2</option>
+        <option value="0.6">3</option>
+        <option value="0.8">4</option>
+        <option value="1.0" selected>5</option>
+        <option value="1.2">6</option>
+        <option value="1.4">7</option>
+        <option value="1.6">8</option>
+        <option value="1.8">9</option>
+        <option value="2.0">10</option>
+    </select>
+
+    <label>レイテンシー (ms)</label>
+    <select id="latency">
+        <option value="100">100</option>
+        <option value="125">125</option>
+        <option value="150" selected>150</option>
+        <option value="175">175</option>
+        <option value="200">200</option>
+        <option value="225">225</option>
     </select>
 
     <!-- bottons -->
