--- a/remote-recording-assistant.html
+++ b/remote-recording-assistant.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <!--
+ *  This code is based on
+ *  https://rawgit.com/Miguelao/demos/master/mediarecorder.html
  *  Copyright (c) 2015 The WebRTC project authors. All Rights Reserved.
  *　
- *  Use of this source code is governed by a BSD-style license
+ *  Use of the above source code is governed by a BSD-style license
  *  that can be found in the LICENSE file in the root of the source
  *  tree.
 -->
@@ -66,9 +68,9 @@
         <button id="stop">停止</button>
         <button id="play" disabled hidden>Push</button>
         <button id="download" disabled>ダウンロード</button>
-        <input type="number" id="index" name="track_number" value="0"
+        <!--<input type="number" id="index" name="track_number" value="0"
                min="0" max="0" hidden>
-        
+        -->
         
         <button id="overdub" hidden>Over Dubbing</button>
     </div>
