--- a/remote-recording-assistant.html
+++ b/remote-recording-assistant.html
@@ -106,8 +106,8 @@
     </br>
 -->
     <div id="controler-0">
-        <label id="inSel">録音</br>音量</label>
-        <label id="latency">レイ</br>テンシー</label>
+        <label for="inSel">録音</br>音量</label>
+        <label for="latency">レイ</br>テンシー</label>
 
         <input type="number" id="inSel" value="5" min="1" max="10">
         <!-- value * 0.2 = micLevel -->
