--- a/test.html
+++ b/test.html
@@ -6,7 +6,7 @@
 <script src="js/error.js"></script>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 <form>
-<input type="button" value="エラー送信" onclick="SendErrorMsg('ProgramName','MethodName','ErrorMessage');" />
+<input type="button" value="エラー送信" onclick="SendErrorMsg('プログラム名','MethodName','ErrorMessage');" />
 </form>
 </body>
 </html>
