--- a/remote-recording-assistant.html
+++ b/remote-recording-assistant.html
@@ -111,7 +111,8 @@
 <div id="mainmenu">
     <div id="controler-1">
         <button class="iconButton" id="playall" data-icon="P" disabled>Play</br></button>
-        <button id="download" disabled>書き出し</button>
+        <button class="iconButton" id="download" data-icon="l" disabled>Save</br></button>
+        <!--<button id="download" disabled>書き出し</button>-->
     </div>
 
     <!-- store recorded tracks -->
@@ -120,6 +121,7 @@
             <span style="display: none;"></span>
             <span>✔で再生</span>
             <span>再生音量</span>
+            <span>遅れ(ms)</span>
             <span>ファイル</span>
         </div>
         <div id="tracks">
